# vigilance-desktop

./: .gitignore  ARCHITECTURAL_DIAGRAM.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  TECHNICAL_SPECS.md  build-portable.ps1  index.html  metadata.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
DOCS/: RELEASE_TEMPLATE.html  TROUBLESHOOTING.md
Vigilance-Portable/: README.txt
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  placeholder.txt
src-tauri/resources/: README.txt
src-tauri/src/: main.rs  sniffer.rs
src/backend/: sniffer.rs
