[package]
name = "vigilance"
version = "2.1.1"
description = "Vigilance Network Security Shield"
authors = ["Daniel Andries"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
pnet = "0.34"
anyhow = "1.0"
log = "0.4"
sysinfo = "0.30"
lazy_static = "1.4"
rfd = "0.14"
csv = "1.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

[profile.release]
panic = "abort" # Strip expensive panic info
codegen-units = 1 # Better optimizations
lto = true # Link time optimization
opt-level = "s" # Optimize for binary size
strip = true # Strip symbols from binary
